// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builtins work as expected 1: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "error('error!');",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 14,
            "loc": SourceLocation {
              "end": Position {
                "column": 14,
                "line": 1,
              },
              "start": Position {
                "column": 6,
                "line": 1,
              },
            },
            "raw": "'error!'",
            "start": 6,
            "type": "Literal",
            "value": "error!",
          },
        ],
        "callee": Node {
          "end": 5,
          "loc": SourceLocation {
            "end": Position {
              "column": 5,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "error",
          "start": 0,
          "type": "Identifier",
        },
        "end": 15,
        "loc": SourceLocation {
          "end": Position {
            "column": 15,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 56: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "head(null);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 10,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 9,
            "loc": SourceLocation {
              "end": Position {
                "column": 9,
                "line": 1,
              },
              "start": Position {
                "column": 5,
                "line": 1,
              },
            },
            "raw": "null",
            "start": 5,
            "type": "Literal",
            "value": null,
          },
        ],
        "callee": Node {
          "end": 4,
          "loc": SourceLocation {
            "end": Position {
              "column": 4,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "head",
          "start": 0,
          "type": "Identifier",
        },
        "end": 10,
        "loc": SourceLocation {
          "end": Position {
            "column": 10,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 57: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "tail(null);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 10,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 9,
            "loc": SourceLocation {
              "end": Position {
                "column": 9,
                "line": 1,
              },
              "start": Position {
                "column": 5,
                "line": 1,
              },
            },
            "raw": "null",
            "start": 5,
            "type": "Literal",
            "value": null,
          },
        ],
        "callee": Node {
          "end": 4,
          "loc": SourceLocation {
            "end": Position {
              "column": 4,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "tail",
          "start": 0,
          "type": "Identifier",
        },
        "end": 10,
        "loc": SourceLocation {
          "end": Position {
            "column": 10,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 58: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "head(1);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 6,
            "loc": SourceLocation {
              "end": Position {
                "column": 6,
                "line": 1,
              },
              "start": Position {
                "column": 5,
                "line": 1,
              },
            },
            "raw": "1",
            "start": 5,
            "type": "Literal",
            "value": 1,
          },
        ],
        "callee": Node {
          "end": 4,
          "loc": SourceLocation {
            "end": Position {
              "column": 4,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "head",
          "start": 0,
          "type": "Identifier",
        },
        "end": 7,
        "loc": SourceLocation {
          "end": Position {
            "column": 7,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 59: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "tail(1);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 6,
            "loc": SourceLocation {
              "end": Position {
                "column": 6,
                "line": 1,
              },
              "start": Position {
                "column": 5,
                "line": 1,
              },
            },
            "raw": "1",
            "start": 5,
            "type": "Literal",
            "value": 1,
          },
        ],
        "callee": Node {
          "end": 4,
          "loc": SourceLocation {
            "end": Position {
              "column": 4,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "tail",
          "start": 0,
          "type": "Identifier",
        },
        "end": 7,
        "loc": SourceLocation {
          "end": Position {
            "column": 7,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 61: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "length(1);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 20,
          "line": 24,
        },
        "start": Position {
          "column": 9,
          "line": 24,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 584,
            "loc": SourceLocation {
              "end": Position {
                "column": 19,
                "line": 24,
              },
              "start": Position {
                "column": 17,
                "line": 24,
              },
            },
            "name": "xs",
            "start": 582,
            "type": "Identifier",
          },
        ],
        "callee": Node {
          "end": 581,
          "loc": SourceLocation {
            "end": Position {
              "column": 16,
              "line": 24,
            },
            "start": Position {
              "column": 9,
              "line": 24,
            },
          },
          "name": "is_null",
          "start": 574,
          "type": "Identifier",
        },
        "end": 585,
        "loc": SourceLocation {
          "end": Position {
            "column": 20,
            "line": 24,
          },
          "start": Position {
            "column": 9,
            "line": 24,
          },
        },
        "start": 574,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 24: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
